# computer_vision_unipd_labs

lab01/: lab01_task1  lab01_task1.cpp  lab01_task2  lab01_task2.cpp  lab01_task3  lab01_task3.cpp  lab01_task4  lab01_task4.cpp  lab01_task5  lab01_task5.cpp
lab02/: max_filter.cpp  min_filter.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lab03/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
lab04/: CMakeLists.txt  task1.cpp  task3.cpp  task4.cpp
lab05/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
